--- a/_main.cfg
+++ b/_main.cfg
@@ -1,5 +1,3 @@
-#ifdef CAMPAIGN_LLM_WESNOTH
-
 [campaign]
     id=LLM_Wesnoth
     name= _ "Echoes of the Battlefield"
@@ -17,10 +15,13 @@
     description= _ "A small experimental campaign exploring reactive dialogue and dynamic units."
 [/campaign]
 
+#ifdef CAMPAIGN_LLM_WESNOTH
+
 [binary_path]
     path=data/add-ons/LLM_Wesnoth
 [/binary_path]
 
 {~add-ons/LLM_Wesnoth/scenarios}
+{~add-ons/LLM_Wesnoth/lua}
 
 #endif
