--- a/scenarios/01_Intro.cfg
+++ b/scenarios/01_Intro.cfg
@@ -1,7 +1,7 @@
 [scenario]
     id=01_Intro
     name= _ "A Quiet Beginning"
-    map_data="{~add-ons/LLM_Wesnoth/maps/intro.map}"
+    map_data="{~add-ons/LLM_Wesnoth/maps/01_Intro.map}"
 
     turns=20
     victory_when_enemies_defeated=no
@@ -27,27 +27,123 @@
         shroud=no
     [/side]
 
+    [side]
+        side=2
+        controller=ai
+        team_name=orcs
+        user_team_name= _ "Orcs"
+
+        canrecruit=no
+
+        gold=0
+        income=0
+        fog=no
+        shroud=no
+    [/side]
+
     [event]
         name=prestart
 
         [objectives]
             side=1
             [objective]
-                description= _ "Survive until the end of turns"
+                description= _ "Defeat all enemy forces"
                 condition=win
             [/objective]
             [objective]
                 description= _ "Death of Arden"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Turn limit reached"
+                condition=lose
+            [/objective]
         [/objectives]
+    [/event]
+
+    [event]
+        name=preload
+        first_time_only=yes
+
+        [lua]
+            code=<<
+                _G.LLM_WESNOTH_HELPERS = nil
+                if not _G.LLM_WESNOTH_HELPERS then
+                    _G.LLM_WESNOTH_HELPERS = wesnoth.require "~add-ons/LLM_Wesnoth/lua/events.lua"
+                end
+                events = _G.LLM_WESNOTH_HELPERS
+
+                math.randomseed(os.time())
+            >>
+        [/lua]
+    [/event]
+
+    [event]
+        name=start
+
+        [lua]
+            code=<< events.spawn_orcs() >>
+        [/lua]
+    [/event]
+
+    [event]
+        name=last breath
+        first_time_only=no
+
+        [lua]
+            code=<< events.on_enemy_killed() >>
+        [/lua]
+    [/event]
+
+    [event]
+        name=recruit
+        first_time_only=no
+
+        [filter]
+            side=1
+        [/filter]
+
+        [lua]
+            code=<< events.on_unit_recruited() >>
+        [/lua]
+    [/event]
+
+    [event]
+        name=unit hits
+        first_time_only=no
+
+        [lua]
+            code=<< events.on_unit_damaged() >>
+        [/lua]
+    [/event]
+
+    [event]
+        name=die
+        first_time_only=no
+
+        [filter]
+            side=2
+        [/filter]
+
+        [if]
+            [not]
+                [have_unit]
+                    side=2
+                [/have_unit]
+            [/not]
+            [then]
+                [endlevel]
+                    result=victory
+                [/endlevel]
+            [/then]
+        [/if]
     [/event]
 
     [event]
         name=turn 20
 
         [endlevel]
-            result=victory
+            result=defeat
         [/endlevel]
     [/event]
 
