feat: add some more interesting stuff

--- a/scenarios/01_Intro.cfg
+++ b/scenarios/01_Intro.cfg
@@ -47,15 +47,11 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Defeat all enemy forces"
+                description= _ "Hold out for 20 turns"
                 condition=win
             [/objective]
             [objective]
                 description= _ "Death of Arden"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Turn limit reached"
                 condition=lose
             [/objective]
         [/objectives]
@@ -79,10 +75,10 @@
     [/event]
 
     [event]
-        name=start
+        name=turn 1
 
         [lua]
-            code=<< events.spawn_orcs() >>
+            code=<< events.on_new_story() >>
         [/lua]
     [/event]
 
@@ -132,9 +128,9 @@
                 [/have_unit]
             [/not]
             [then]
-                [endlevel]
-                    result=victory
-                [/endlevel]
+                [lua]
+                    code=<< events.on_new_story() >>
+                [/lua]
             [/then]
         [/if]
     [/event]
@@ -143,7 +139,7 @@
         name=turn 20
 
         [endlevel]
-            result=defeat
+            result=victory
         [/endlevel]
     [/event]
 
