--- a/scenarios/01_Intro.cfg
+++ b/scenarios/01_Intro.cfg
@@ -75,10 +75,10 @@
     [/event]
 
     [event]
-        name=turn 1
+        name=prestart
 
         [lua]
-            code=<< events.on_new_story() >>
+            code=<< events.on_story_init() >>
         [/lua]
     [/event]
 
@@ -111,28 +111,6 @@
         [lua]
             code=<< events.on_unit_damaged() >>
         [/lua]
-    [/event]
-
-    [event]
-        name=die
-        first_time_only=no
-
-        [filter]
-            side=2
-        [/filter]
-
-        [if]
-            [not]
-                [have_unit]
-                    side=2
-                [/have_unit]
-            [/not]
-            [then]
-                [lua]
-                    code=<< events.on_new_story() >>
-                [/lua]
-            [/then]
-        [/if]
     [/event]
 
     [event]
