--- a/scenarios/01_Intro.cfg
+++ b/scenarios/01_Intro.cfg
@@ -75,7 +75,7 @@
     [/event]
 
     [event]
-        name=prestart
+        name=start
 
         [lua]
             code=<< events.on_story_init() >>
